added the banner section

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 
 </head>
-<body class=" h-[100vh] ">
+<body class=" h-[100vh]  ">
     <header>
-        <nav class="flex justify-between mt-10">
-            <div class="flex gap-3 ml-10">
+        <nav class="flex justify-between mt-10 ">
+            <div class="flex gap-3 ml-10 md::flex-col logo ">
                 <img src="./assets/logo.png" alt="" class="w-12">
                 <h2 class="font-bold text-green-800">Emergency <br> Service</h2>
             </div>
@@ -35,7 +35,13 @@
                 </div>
             </div>
         </nav>
-       
+        <div class=" bg-green-900 mt-5 grid gap-4  pb-4">
+            <div class="flex justify-center mt-5">
+                 <img src="./assets/logo.png" alt="" class="w-48 h-auto">
+            </div>
+            <h1 class="text-white text-center font-extrabold text-4xl hind-madurai-bold ">Emergency Service Directory</h1>
+            <p class="text-white text-center font-semibold  hind-madurai-semibold ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        </div>
         
     </header>
 </body>
