--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </head>
 <body class=" h-[100vh]  ">
     <header>
-        <nav class="flex justify-between mt-10 ">
-            <div class="flex gap-3 ml-10 md::flex-col logo ">
+        <nav class="flex justify-between mt-10 logo">
+            <div class="flex gap-3 ml-10 md::flex-col  ">
                 <img src="./assets/logo.png" alt="" class="w-12">
                 <h2 class="font-bold text-green-800">Emergency <br> Service</h2>
             </div>
-            <div class="flex gap-4 mr-10 ">
+            <div class="flex gap-4 mr-10 nav-content ">
                 <div class="border-2 border-gray-50 w-22 h-fit  bg-[#F4F5F7] flex rounded-3xl justify-content items-center pl-4 pr-3 pb-2 pt-2 gap-3 ">
                     <p>0</p>
                     <img src="./assets/heart.png" alt="" class="w-8">
@@ -43,9 +43,9 @@
             <p class="text-white text-center font-semibold  hind-madurai-semibold ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
         </div>   
     </header>
-    <main class="bg-[#F4F5F7]">
-    <div class=" w-11/12 mx-auto py-10 grid grid-cols-12 gap-5">
-    <div class="border-2 border-gray-100 col-span-9 grid grid-cols-3 gap-3  ">
+    <main class=" bg-[#F4F5F7]">
+    <div class="card-call w-11/12 mx-auto py-10 grid grid-cols-12 gap-5">
+    <div class="card border-2 border-gray-100 col-span-9 grid grid-cols-3 gap-3  ">
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
@@ -62,7 +62,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class=" call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
      </div>
@@ -103,7 +103,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
         </div>
      </div>
      </div>
@@ -124,7 +124,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
      </div>
@@ -144,7 +144,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
     </div> 
@@ -164,7 +164,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
     </div>
@@ -185,7 +185,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 b text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
      </div>
@@ -206,7 +206,7 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
      </div>
      </div>
@@ -227,14 +227,26 @@
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
           <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
         </div>
      </div>
    </div>
   </div>
    
-      <div class="border-2 border-green-500  col-span-3">call history</div>
+    <div class="call border-2 border-gray-100 rounded-2xl col-span-3  bg-base-100  p-4 shadow-sm  ">
+     <div class="flex justify-between items-center ">
+        <div class="flex justify-between items-center  gap-2">
+        <i class="fa-regular fa-clock w-fit h-fit"></i>
+        <h2 class="roboto font-bold text-[#111111]">Call History</h2>
+    </div>
+       <div><button class="col-span-6  border-2 rounded-3xl w-20  p-2 bg-green-500  border-gray-100  h-fit  text-center p-2 text-white "> Clear </button></div>
+    </div>
+    <div class="History bg-[#F4F5F7] h-[100vh] mt-3 ">
+        history
+    </div>
+    </div>
         </div>
     </main>
+    <script src="./script,js"></script>
 </body>
 </html>
