--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             </div>
             <div class="flex gap-4 mr-10 nav-content ">
                 <div class="border-2 border-gray-50 w-22 h-fit  bg-[#F4F5F7] flex rounded-3xl justify-content items-center pl-4 pr-3 pb-2 pt-2 gap-3 ">
-                    <p>0</p>
-                    <img src="./assets/heart.png" alt="" class="w-8">
+                    <p id="heart">0</p>
+                    <img src="./assets/heart.png" alt="" class="w-8 ">
                 </div>
                 <div class="border-2 border-gray-50 w-22 h-fit  bg-[#F4F5F7] flex rounded-3xl p-2 gap-3 justify-content items-center">
-                    <p>100</p>
+                    <p id="coin">100</p>
                     <img src="./assets/coin.png" alt="" class="w-8">
                 </div>
                 <div class="bg-green-500 border-2 border-gray-50 w-22 h-12.5 rounded-3xl text-center p-2 text-white">
-                    <p >2 Copy</p>
+                    <p><span class="copy-count">2</span> Copy</p>
                 </div>
             </div>
         </nav>
@@ -49,40 +49,40 @@
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> National Emergency Number</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> National Emergency Number</h2>
         <p class="roboto text-[#5C5C5C]">National Emergency</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">999</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">All</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class=" call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button  class="call-btn  col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
     </div>
      <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/police.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Police Helpline Number</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Police Helpline Number</h2>
         <p class="roboto text-[#5C5C5C]">Police</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">999</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2 text-center">Police</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button  class="call-btn  col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
      </div>
@@ -90,20 +90,20 @@
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/fire-service.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Fire Service Number</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Fire Service Number</h2>
         <p class="roboto text-[#5C5C5C]">Fire Service</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">999</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Fire</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button class="call-btn  col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
         </div>
      </div>
      </div>
@@ -111,59 +111,59 @@
      <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/ambulance.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Ambulance Service</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Ambulance Service</h2>
         <p class="roboto text-[#5C5C5C]">Ambulance</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">1994-999999</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">1994-999999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Health</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button  class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
      </div>
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Women & Child Helpline</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Women & Child Helpline</h2>
         <p class="roboto text-[#5C5C5C]">Women & Child Helpline</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">109</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">109</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Help</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button  class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
     </div> 
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Anti-Corruption Helpline</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Anti-Corruption Helpline</h2>
         <p class="roboto text-[#5C5C5C]">Anti-Corruption</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">106</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">106</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Govt.</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
           <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
@@ -172,20 +172,20 @@
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Electricity Helpline</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Electricity Helpline</h2>
         <p class="roboto text-[#5C5C5C]">Electricity Outage</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">16216</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">16216</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Electricity</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 b text-white "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button class="call-btn  col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100 b text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
       </div>
      </div>
@@ -193,20 +193,20 @@
       <div class="card bg-base-100 w-full p-4 shadow-sm">     
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Brac Helpline</h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Brac Helpline</h2>
         <p class="roboto text-[#5C5C5C]">Brac</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">16445</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">16445</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">NGO</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100   "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button  class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white "><i class="fa-solid fa-phone "></i> Call</button>
         </div>
      </div>
      </div>
@@ -214,20 +214,20 @@
     <div class="card bg-base-100 w-full p-4 shadow-sm">
         <div class="flex justify-between items-center pt-3">
         <img src="./assets/emergency.png" alt="" class="w-12 ml-4 border-3 bg-[#FFE3E2] border-solid border-[#FFE3E2] rounded-2xl p-2" />
-        <i class="fa-regular fa-heart mr-3"></i>
+        <i class="fa-regular fa-heart mr-3 heart-icon"></i>
         </div>
      <div class="card-body ">
         <div>
-            <h2 class="card-title hind-madurai-bold "> Bangladesh Railway Helpline </h2>
+            <h2 class="card-title hind-madurai-bold service-name"> Bangladesh Railway Helpline </h2>
         <p class="roboto text-[#5C5C5C]">Bangladesh Railway</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto">163</h1>
+            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">163</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Travel</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
-          <button class="border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
-          <button class="call-btn col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
+          <button class="copy-btn border-2 col-span-6 rounded-2xl p-2  border-gray-100  "><i class="fa-regular fa-copy"></i> Copy</button>
+          <button class="call-btn  col-span-6  border-2 rounded-2xl  p-2 bg-green-500  border-gray-100  text-white"><i class="fa-solid fa-phone "></i> Call</button>
         </div>
      </div>
    </div>
@@ -239,14 +239,14 @@
         <i class="fa-regular fa-clock w-fit h-fit"></i>
         <h2 class="roboto font-bold text-[#111111]">Call History</h2>
     </div>
-       <div><button class="col-span-6  border-2 rounded-3xl w-20  p-2 bg-green-500  border-gray-100  h-fit  text-center p-2 text-white "> Clear </button></div>
+       <div><button class="clear-btn col-span-6  border-2 rounded-3xl w-20  p-2 bg-green-500  border-gray-100  h-fit  text-center p-2 text-white "> Clear </button></div>
     </div>
     <div class="History bg-[#F4F5F7] h-[100vh] mt-3 ">
-        history
+        
     </div>
     </div>
         </div>
     </main>
-    <script src="./script,js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
