added the changes

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
        <div><button class="clear-btn col-span-6  border-2 rounded-3xl w-20  p-2 bg-green-500  border-gray-100  h-fit  text-center p-2 text-white "> Clear </button></div>
     </div>
-    <div class="History bg-[#F4F5F7] h-[100vh] mt-3 ">
+    <div class="History  mt-3 ">
         
     </div>
     </div>
