--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
                 <h2 class="font-bold text-green-800">Emergency <br> Service</h2>
             </div>
             <div class="flex gap-4 mr-10 nav-content ">
-                <div class="border-2 border-gray-50 w-22 h-fit  bg-[#F4F5F7] flex rounded-3xl justify-content items-center pl-4 pr-3 pb-2 pt-2 gap-3 ">
+                <div class="border-2 border-gray-50 w-25 h-fit  bg-[#F4F5F7] flex rounded-4xl justify-content items-center pl-4 pr-3 pb-2 pt-2 gap-3 ">
                     <p id="heart">0</p>
                     <img src="./assets/heart.png" alt="" class="w-8 ">
                 </div>
-                <div class="border-2 border-gray-50 w-22 h-fit  bg-[#F4F5F7] flex rounded-3xl p-2 gap-3 justify-content items-center">
+                <div class="border-2 border-gray-50 w-25 h-fit  bg-[#F4F5F7] flex rounded-4xl p-2 gap-3 justify-content items-center">
                     <p id="coin">100</p>
                     <img src="./assets/coin.png" alt="" class="w-8">
                 </div>
-                <div class="bg-green-500 border-2 border-gray-50 w-22 h-12.5 rounded-3xl text-center p-2 text-white">
+                <div class="bg-green-500 border-2 border-gray-50 w-25 h-12.5 rounded-4xl text-center p-2 text-white">
                     <p><span class="copy-count">2</span> Copy</p>
                 </div>
             </div>
         </nav>
-        <div class=" bg-green-900 mt-5 grid gap-4  pb-4">
+        <div class=" bg-[#006747] mt-5 grid gap-4  pb-4 ">
             <div class="flex justify-center mt-5">
-                 <img src="./assets/logo.png" alt="" class="w-48 h-auto">
+                 <img src="./assets/logo-dark.png" alt="" class="w-48 h-48 p-5">
             </div>
             <h1 class="text-white text-center font-extrabold text-4xl hind-madurai-bold ">Emergency Service Directory</h1>
             <p class="text-white text-center font-semibold  hind-madurai-semibold ">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
@@ -57,7 +57,7 @@
         <p class="roboto text-[#5C5C5C]">National Emergency</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">999</h1>
+            <h1 class="text-[#111111] ffont-bold  text-2xl roboto number">999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">All</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -77,7 +77,7 @@
         <p class="roboto text-[#5C5C5C]">Police</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">999</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2 text-center">Police</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -98,7 +98,7 @@
         <p class="roboto text-[#5C5C5C]">Fire Service</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">999</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Fire</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -119,7 +119,7 @@
         <p class="roboto text-[#5C5C5C]">Ambulance</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">1994-999999</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">1994-999999</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Health</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -139,7 +139,7 @@
         <p class="roboto text-[#5C5C5C]">Women & Child Helpline</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">109</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">109</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Help</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -159,7 +159,7 @@
         <p class="roboto text-[#5C5C5C]">Anti-Corruption</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">106</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">106</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Govt.</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -180,7 +180,7 @@
         <p class="roboto text-[#5C5C5C]">Electricity Outage</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">16216</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">16216</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Electricity</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -201,7 +201,7 @@
         <p class="roboto text-[#5C5C5C]">Brac</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">16445</h1>
+            <h1 class="text-[#111111] font-bold  text-2xl roboto number">16445</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">NGO</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
@@ -222,7 +222,7 @@
         <p class="roboto text-[#5C5C5C]">Bangladesh Railway</p>
         </div>
         <div>
-            <h1 class="text-[#111111] font-extrabold text-3xl roboto number">163</h1>
+            <h1 class="text-[#111111] font-bold text-2xl roboto number">163</h1>
             <p class="border-2 rounded-3xl border-gray-100 bg-gray-300 hind-madurai-regular max-w-fit p-2  text-center">Travel</p>
         </div>
         <div class="flex justify-between w-12/12 grid grid-cols-12 gap-4">
