added the change

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </nav>
-        <div class=" bg-[#006747] mt-5 grid gap-4  pb-4 ">
+        <div class=" bg-[radial-gradient(circle,#006747_0%,#013223_100%)] mt-5 grid gap-4  pb-4 ">
             <div class="flex justify-center mt-5">
                  <img src="./assets/logo-dark.png" alt="" class="w-48 h-48 p-5">
             </div>
